@@ -9,8 +9,10 @@ COM_CATEGORIES="Categories"
 COM_CATEGORIES_BASIC_FIELDSET_LABEL="Basic Options"
 COM_CATEGORIES_CATEGORIES_BASE_TITLE="Category Manager"
 COM_CATEGORIES_CATEGORIES_TITLE="Category Manager: %s"
-COM_CATEGORIES_CATEGORY_ADD_TITLE="Category Manager: Add New Category"
-COM_CATEGORIES_CATEGORY_EDIT_TITLE="Category Manager: Edit Category"
+COM_CATEGORIES_CATEGORY_ADD_TITLE="Category Manager: Add A New %s Category"
+COM_CATEGORIES_CATEGORY_EDIT_TITLE="Category Manager: Edit A %s Category"
+COM_CATEGORIES_CATEGORY_BASE_ADD_TITLE="Category Manager: Add New Category"
+COM_CATEGORIES_CATEGORY_BASE_EDIT_TITLE="Category Manager: Edit Category"
 COM_CATEGORIES_CATEGORY_OPTIONS="Category Options"
 COM_CATEGORIES_DESCRIPTION_DESC="Enter an optional category description in the text-area."
 COM_CATEGORIES_ERROR_BATCH_FAILED="Failed batch operation: %s"
