@@ -14,6 +14,8 @@ COM_CONTENT_ARTICLES="Articles"
 COM_CONTENT_CATEGORIES="Categories"
 COM_CONTENT_CATEGORIES_VIEW_DEFAULT_DESC="Shows a list of all the article categories within a category."
 COM_CONTENT_CATEGORIES_VIEW_DEFAULT_TITLE="List All Categories"
+COM_CONTENT_CATEGORY_ADD_TITLE= "Category Manager: Add A New Articles Category"
+COM_CONTENT_CATEGORY_EDIT_TITLE="Category Manager: Edit An Articles Category"
 COM_CONTENT_CATEGORY_VIEW_BLOG_DESC="Displays article introductions in a single or multi-column layout."
 COM_CONTENT_CATEGORY_VIEW_BLOG_TITLE="Category Blog"
 COM_CONTENT_CATEGORY_VIEW_DEFAULT_DESC="Displays a list of articles in a category."
