@@ -8,6 +8,8 @@ COM_NEWSFEEDS="Newsfeeds"
 COM_NEWSFEEDS_CATEGORIES="Categories"
 COM_NEWSFEEDS_CATEGORIES_VIEW_DEFAULT_DESC="Show all the news feed categories within a category."
 COM_NEWSFEEDS_CATEGORIES_VIEW_DEFAULT_TITLE="List All News Feed Categories"
+COM_NEWSFEEDS_CATEGORY_ADD_TITLE= "Category Manager: Add A News Feed Category"
+COM_NEWSFEEDS_CATEGORY_EDIT_TITLE= "Category Manager: Edit A News Feed Category"
 COM_NEWSFEEDS_CATEGORY_VIEW_DEFAULT_DESC="Show all news feeds within a category."
 COM_NEWSFEEDS_CATEGORY_VIEW_DEFAULT_TITLE="List News Feeds in a Category"
 COM_NEWSFEEDS_FEEDS="Feeds"
